src/test/ui/error-codes/E0120.stderr
error[E0120]: the Drop trait may only be implemented on structures
  --> $DIR/E0120.rs:3:15
   |
LL | impl Drop for dyn MyTrait {
   |               ^^^^^^^^^^^ implementing Drop requires a struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0120`.
